fix mintbutton layout on mobile

--- a/src/components/GenerativeToken/MintButton.module.scss
+++ b/src/components/GenerativeToken/MintButton.module.scss
@@ -6,6 +6,9 @@
 
   &.reversed {
     flex-direction: row-reverse;
+    > &:last-child {
+      flex-grow: 1;
+    }
   }
 }
 
@@ -53,7 +56,7 @@
 }
 
 @media (max-width: $breakpoint-sm) {
-  .root {
+  .btns_wrapper {
     width: 100%;
   }
   .button {
